# Life-Cycle

./: .gitignore  MODULE.template.bazel  README.md  build.gradle.kts  commandForwarder.sh  deploy.sh  hytale_auth_data.json  maven_deps.json  permissions.json  run.sh  settings.gradle.kts  test.sh
.devcontainer/: install-dependencies.sh  setup_server.sh  start_server.sh
.devcontainer/debian/: devcontainer.json
build_defs/annotations/: BUILD.bazel  return_if_null.bzl
build_defs/hytale/import_bundles/: BUILD.bazel
libs/common-api/: build.gradle.kts
plugin/: BUILD.bazel  build.gradle.kts
plugin/manifest/: constants.bzl
plugin/src/main/java/DrDan/AnimalsGrow/: AnimalsGrowAction.java
plugin/src/main/java/DrDan/AnimalsGrow/annotation/: ReturnIfNull.java  ReturnIfNullProcessor.java  ReturnIfNullSourceTransformer.java
plugin/src/main/java/DrDan/AnimalsGrow/command/: AnimalsGrowCommand.java
plugin/src/main/java/DrDan/AnimalsGrow/example/: ReturnIfNullExample.java
plugin/src/main/kotlin/DrDan/AnimalsGrow/: AnimalsGrow.kt  AnimalsGrowAction.kt
plugin/src/main/kotlin/DrDan/AnimalsGrow/command/: AnimalsGrowAnimationCommand.kt  AnimalsGrowCommand.kt  AnimalsGrowTestCommand.kt
plugin/src/main/kotlin/DrDan/AnimalsGrow/config/: AnimalsGrowConfig.kt  GrowthEntry.kt
plugin/src/main/kotlin/DrDan/AnimalsGrow/event/: AnimalsGrowEvent.kt
plugin/src/main/kotlin/DrDan/AnimalsGrow/grow_ecs/: AnimalsGrowComponent.kt  AnimalsGrowSystem.kt
plugin/src/main/kotlin/DrDan/AnimalsGrow/test/: TestRunner.kt
plugin/src/main/resources/server/Models/: Boar_Piglet.json
(+28 files in other folders)
