module(
    name = "bazel-hytale-pipeline_example-plugin",
    version = "0.0.0",
)

bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(name = "rules_java", version = "8.16.1")
bazel_dep(name = "rules_kotlin", version = "2.1.0")

bazel_dep(name = "rules_proto_grpc_java", version = "5.8.0")
bazel_dep(name = "protobuf", version = "31.1")
bazel_dep(name = "rules_pkg", version = "1.1.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

### MAVEN_DEPS_SECTION ###

use_repo(maven, "maven")

hytale = use_extension("//build_defs/hytale/import_bundles:extension.bzl", "hytale_ext")
use_repo(hytale, "remote_hytale_server")
